2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the TLS memory allocator.

	* lib/src/tlsmalloc/tlsconfig.h,
	* lib/src/tlsmalloc/tlsmalloc.c: Optimize bin selection by using
	compiler built-in bit count operations.

	* lib/src/tlsmalloc/tlsmcheck.c: Update accordingly.

	* lib/src/tlsmalloc/tlsmalloc.c (free_superblock): Fix bug where
	too many superblocks would be released.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes to quiet compiler warnings.

	* lib/src/strncmp.c,
	* lib/src/vprintf.c: Use the standard C header names.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make the TLS memory allocator the default allocator on MT-Alpha.

	* lib/src/malloc_wrappers.c: Remove.
	
	* lib/mtalpha.mk: Do not build the dlmalloc wrappers any
	more. Compile `tlsmalloc' and rename the services to their
	standard C names.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the TLS memory allocator.

	* lib/mtalpha-sim/include/stdlib.h: Rename the `fast_XXX' macros
	to `excl_dlXXX' to clarify their meaning.

	* lib/src/tlsmalloc/tls_arch_mtalpha.h: Use them. Also, use the
	new MGSim mmap/munmap interface to manage storage.

	* lib/src/tlsmalloc/tlsmalloc.c: Place the count of superblocks at
	the first word, since this has a special behavior on the Microgrid
	(permissions are not checked for the first word of TLS, so it can
	be read to 0 without error). Also, map and count the control block
	itself. Rename the `mallinfo' services to `stats', since
	`mallinfo' has special semantics not supported yet. 

	* lib/src/tlsmalloc/tlsmalloc.h,
	* lib/src/tlsmalloc/tlsmalloc.c: Fix interface of `calloc'.

	* lib/src/tlsmalloc/tricks.h: Fix `forceinline'.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the SL/MGSim interface.

	The Microgrid simulator was recently modified to allow programs to
	interact more with the simulation. With the increased functionality,
	some extra encapsulation in the library becomes needed.
